--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
 
@@ -21,24 +21,16 @@
         <img class="profile" src="assets/images/image.jpg" alt="Фото"/>
         <h1 class="name">Романычева Екатерина Сергеевна</h1>
         <h3 class="tagline">Ruby on Rails Developer</h3>
-      </div><!--//profile-container-->
+      </div>
 
       <div class="contact-container container-block">
         <h2 class="container-block-title">Контакты</h2>
         <ul class="list-unstyled contact-list">
-          <li class="email"><i class="fa fa-envelope"></i><a href="mailto:yourname@mail.ru">esromanycheva@mail.ru</a></li>
-          <li class="phone"><i class="fa fa-phone"></i><a href="tel:01234567890">+7(926)7766504</a></li>
+          <li class="email"><i class="fa fa-envelope"></i><a href="mailto:esromanycheva@mail.ru">esromanycheva@mail.ru</a></li>
+          <li class="phone"><i class="fa fa-phone"></i><a href="tel:79267766504">+7(926)7766504</a></li>
           <li class="github"><i class="fa fa-github"></i><a href="https://github.com/esromanycheva" target="_blank">@esromanycheva</a></li>
         </ul>
-      </div><!--//contact-container-->
-
-      <!-- <div class="languages-container container-block">
-        <h2 class="container-block-title">Знание языков</h2>
-        <ul class="list-unstyled interests-list">
-          <li>Английский <span class="lang-desc">(чтение технической документации)</span></li>
-          <li>Русский <span class="lang-desc">(родной)</span></li>
-        </ul>
-      </div>//languages-container -->
+      </div>
     </div>
 
     <div class="main-wrapper">
@@ -59,7 +51,7 @@
           <div class="meta">
             <div class="upper-row">
                 <h3 class="job-title">Ruby on Rails Developer</h3>
-                <div class="time">февраль 2022 г.- август 2022 г. </div>
+                <div class="time">февраль 2022 г. — август 2022 г. </div>
             </div>
             <div class="company">Удаленно</div>
           </div>
@@ -78,7 +70,7 @@
             <div class="company">г. Москва</div>
           </div>
           <div class="details">
-            <p><a href="https://mabiu.ru//">Международная академия бизнеса и управления</a></p>
+            <p><a href="https://mabiu.ru/">Международная академия бизнеса и управления</a></p>
           </div>
         </div>
       </section>
@@ -110,8 +102,8 @@
       <section class="section projects-section">
         <h2 class="section-title">Реализованные проекты в ходе обучения</h2>
         <div class="item">
-            <span class="project-title"><a href="https://github.com/esromanycheva/askmee" target="_blank">ASK.me</a></span> -
-            <span class="project-tagline">Ruby on Rails приложение, в котором можно зарегистрироваться, задавать и отвечать на вопросы своих друзей и анонимных пользователей.</span>
+          <span class="project-title"><a href="https://github.com/esromanycheva/askmee" target="_blank">ASK.me</a></span> -
+          <span class="project-tagline">Ruby on Rails приложение, в котором можно зарегистрироваться, задавать и отвечать на вопросы своих друзей и анонимных пользователей.</span>
         </div>
 
         <div class="item">
