--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="company">Удаленно</div>
           </div>
           <div class="details">
-            <p><a href="https://goodprogrammer.ru/">Онлaйн-интенсив по Ruby и Ruby on Rils от GoodProgrammer</a></p>
+            <p><a href="https://goodprogrammer.ru/" target="_blank">Онлaйн-интенсив по Ruby и Ruby on Rils от GoodProgrammer</a></p>
           </div>
           <p>Ruby Core, ООП, классы, XML, JSON, RSpec, БД, отладчик RoR, MVC, REST, развертывание приложения Rails, VPS, DNS, Capistrano, Heroku Devise, RSpec, ActionCable, Turbo, Hotwire, Stimulus, аутентификация, отправка электронных писем</p>
         </div>
@@ -70,7 +70,7 @@
             <div class="company">г. Москва</div>
           </div>
           <div class="details">
-            <p><a href="https://mabiu.ru/">Международная академия бизнеса и управления</a></p>
+            <p><a href="https://mabiu.ru/" target="_blank">Международная академия бизнеса и управления</a></p>
           </div>
         </div>
       </section>
